Increase team member images to 300x300px to prevent face cropping

--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,8 @@ footer {
 }
 
 .team-card img {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     border-radius: 50%;
     margin: 2rem auto;
